NB + setup script

--- a/notebooks/XX_climatologies_anomalies.ipynb
+++ b/notebooks/XX_climatologies_anomalies.ipynb
@@ -1,19 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Install EK packages\n",
-    "!conda install -y -c conda-forge earthkit-data  \n",
-    "!pip install -q earthkit-maps\n",
-    "# Replace with PyPi when released\n",
-    "!pip install earthkit-climate@git+https://github.com/ecmwf/earthkit-climate\n",
+    "# Climatologies and Anomalies\n",
     "\n",
-    "# Addittional dependancies:\n",
-    "!conda install -c conda-forge cf-units cartopy "
+    "This notebook will demonstrate how to use the earthkit libraries to access some ERA5 data, calculate some climatologies and anomalies then plot the output.\n",
+    "\n",
+    "For this exercise we will use the earthkit-data package to access the data, earthkit-climate to calculate our climatologies and anomalies and earthkit-maps to plot the results."
    ]
   },
   {
@@ -22,7 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from earthkit import data as ek_data\n",
     "from earthkit import climate as ek_climate\n",
     "from earthkit import maps as ek_maps"
@@ -30,42 +24,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create directories \n",
-    "if not os.path.isdir('test_data'): os.mkdir('test_data')\n",
-    " \n",
-    "# set constants\n",
-    "YEARS = [yr for yr in range(2015,2018)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-24 16:47:08,006 INFO Welcome to the CDS\n",
-      "2023-08-24 16:47:08,007 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
-      "2023-08-24 16:47:08,125 INFO Request is queued\n",
-      "2023-08-24 16:47:09,168 INFO Request is running\n",
-      "2023-08-24 16:51:26,233 INFO Request is completed\n",
-      "2023-08-24 16:51:26,234 INFO Downloading https://download-0016.copernicus-climate.eu/cache-compute-0016/cache/data7/adaptor.mars.internal-1692892028.568449-15832-5-9bf85dc6-5a61-49cb-86ee-805358e1388d.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-0a02c8c2f51ff372a0e89f39cee7fc8be756a2ae2de1738978a069f40e6e4098.cache.tmp (473.1M)\n",
-      "2023-08-24 16:52:38,213 INFO Download rate 6.6M/s  \n"
+      "2023-08-31 09:59:51,423 INFO Welcome to the CDS\n",
+      "2023-08-31 09:59:51,423 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2023-08-31 09:59:51,491 INFO Request is queued\n",
+      "2023-08-31 09:59:52,532 INFO Request is running\n",
+      "2023-08-31 10:04:09,633 INFO Request is completed\n",
+      "2023-08-31 10:04:09,634 INFO Downloading https://download-0002-clone.copernicus-climate.eu/cache-compute-0002/cache/data6/adaptor.mars.internal-1693472391.9870067-9401-10-3006dbbf-bbe0-4994-9236-0da849051100.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-5da7848bb093a3428d7d06865db88d2bceac0fbe5ff7bc71ddf2a2fb50d9432a.cache.tmp (607.6M)\n",
+      "2023-08-31 10:05:37,581 INFO Download rate 6.9M/s  \n"
      ]
     }
    ],
    "source": [
     "cds_dataset_name = 'reanalysis-era5-single-levels'\n",
-    "cds_request_base = {\n",
+    "\n",
+    "# We use an Earthkit bounding box object to describe our area, this clears up any lack of clarity of the order of\n",
+    "#  North, South, East, West.\n",
+    "\n",
+    "area = ek_data.utils.bbox.BoundingBox(north=80, south=30, west=-30, east=60)\n",
+    "cds_request = {\n",
     "    'product_type': 'reanalysis',\n",
     "    'variable': '2m_temperature',\n",
-    "    'year': YEARS,\n",
+    "    'year': [\"2015\", \"2016\", \"2017\"],\n",
     "    'month': [\n",
     "        '01', '02', '03',\n",
     "        '04', '05', '06',\n",
@@ -88,16 +74,14 @@
     "    'time': [\n",
     "        '00:00', '06:00', '12:00', '18:00',\n",
     "    ],\n",
-    "    'area': [\n",
-    "        80, -10, 30, 60,\n",
-    "    ],\n",
+    "    'area': area\n",
     "}\n",
-    "era5_data = ek_data.from_source(\"cds\", cds_dataset_name, cds_request_base)\n"
+    "era5_data = ek_data.from_source(\"cds\", cds_dataset_name, cds_request)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
