Adds inline comments to explain format keys

--- a/notebooks/02_visualisation_basics.ipynb
+++ b/notebooks/02_visualisation_basics.ipynb
@@ -315,8 +315,11 @@
     "for subplot, conditions in zip(chart, YEARS.values()):\n",
     "    # Add a title to each subplot, using our convenient dictionary of conditions\n",
     "    # to quickly add suitable titles\n",
+    "    # The !u conversion on short_name below converts to lower case\n",
     "    subplot.title(f\"{conditions} - ERA5 {{short_name!u}} monthly mean: {{time:%B %Y}}\")\n",
-    "    \n",
+    "\n",
+    "# Note that time can be formatted flexibly using datetime format keys - see\n",
+    "# https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes\n",
     "chart.title(\"{variable_name} in {time:%B} of {time:%Y}\", fontsize=14)\n",
     "    \n",
     "chart.legend(label=\"{variable_name!l} ({units})\", location=\"bottom\", ticks=range(15, 33))\n",
