Fixes ek-climate path

--- a/notebooks/02_visualisation_basics.ipynb
+++ b/notebooks/02_visualisation_basics.ipynb
@@ -784,8 +784,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "era5_climatology = ek.climate.climatology.mean(era5_reference, frequency=\"month\")\n",
-    "era5_anomaly = ek.climate.climatology.anomaly(era5_2023, era5_climatology, label=None, frequency=\"month\")"
+    "era5_climatology = ek.climate.aggregate.climatology.mean(era5_reference, frequency=\"month\")\n",
+    "era5_anomaly = ek.climate.aggregate.climatology.anomaly(era5_2023, era5_climatology, label=None, frequency=\"month\")"
    ]
   },
   {
