11,12,13 pre-download compatible

--- a/notebooks/11_daily_monthly_stats.ipynb
+++ b/notebooks/11_daily_monthly_stats.ipynb
@@ -22,6 +22,7 @@
     "import numpy as np # Everyone loves a numpy!\n",
     "\n",
     "import earthkit as ek\n",
+    "# To make our life easier, we import the aggregate subpackage directly\n",
     "from earthkit.climate import aggregate as ek_aggregate\n",
     "\n",
     "DOWNLOAD_FROM_CDS = True\n",
@@ -41,7 +42,36 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-12 10:37:07,278 INFO Welcome to the CDS\n",
+      "2023-09-12 10:37:07,280 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2023-09-12 10:37:07,513 INFO Request is queued\n",
+      "2023-09-12 10:37:08,636 INFO Request is running\n",
+      "2023-09-12 10:40:00,132 INFO Request is completed\n",
+      "2023-09-12 10:40:00,133 INFO Downloading https://download-0007-clone.copernicus-climate.eu/cache-compute-0007/cache/data9/adaptor.mars.internal-1694507952.736105-10856-8-c7461a15-d888-4c43-8117-fe573a8d5df2.nc to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-32e77d0567c10f3feddcedded260cfbc89d64659870de5df471e50271cf3f6bb.nc.tmp (517.3M)\n",
+      "2023-09-12 10:47:32,287 INFO Download rate 1.1M/s  \n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "earthkit.data.readers.netcdf.NetCDFField.write()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb Cell 4\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb#W3sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m     era5_TP_data \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mfrom_source(\u001b[39m\"\u001b[39m\u001b[39mcds\u001b[39m\u001b[39m\"\u001b[39m, cds_dataset_name, cds_request)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb#W3sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m     \u001b[39m# # Save for next time\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb#W3sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m     \u001b[39m# era5_T2M_data.save(f\"{LOCAL_DATA_DIR}/era5_t2m_Europe_2015_JanFebMarch.grib\")\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb#W3sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m     era5_TP_data\u001b[39m.\u001b[39;49msave(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m{\u001b[39;49;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;49;00m\u001b[39m/era5_tp_Europe_2015_JanFebMarch.nc\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb#W3sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/11_daily_monthly_stats.ipynb#W3sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m     era5_T2M_data \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mfrom_source(\u001b[39m\"\u001b[39m\u001b[39mfile\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;00m\u001b[39m/era5_t2m_Europe_2015_JanFebMarch.grib\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/core/fieldlist.py:1157\u001b[0m, in \u001b[0;36mFieldList.save\u001b[0;34m(self, filename)\u001b[0m\n\u001b[1;32m   1148\u001b[0m \u001b[39m\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\"\"Write all the fields into a file. The target file will be overwritten if\u001b[39;00m\n\u001b[1;32m   1149\u001b[0m \u001b[39malready exists.\u001b[39;00m\n\u001b[1;32m   1150\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1154\u001b[0m \u001b[39m    The target file path.\u001b[39;00m\n\u001b[1;32m   1155\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1156\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(filename, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m-> 1157\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwrite(f)\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/core/fieldlist.py:1168\u001b[0m, in \u001b[0;36mFieldList.write\u001b[0;34m(self, f)\u001b[0m\n\u001b[1;32m   1160\u001b[0m \u001b[39m\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\"\"Write all the fields to a file object.\u001b[39;00m\n\u001b[1;32m   1161\u001b[0m \n\u001b[1;32m   1162\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1165\u001b[0m \u001b[39m    The target file object.\u001b[39;00m\n\u001b[1;32m   1166\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1167\u001b[0m \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m:\n\u001b[0;32m-> 1168\u001b[0m     s\u001b[39m.\u001b[39;49mwrite(f)\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/core/__init__.py:74\u001b[0m, in \u001b[0;36mBase.write\u001b[0;34m(self, f)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[39m@abstractmethod\u001b[39m\n\u001b[1;32m     72\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite\u001b[39m(\u001b[39mself\u001b[39m, f):\n\u001b[1;32m     73\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Writes data to the ``f`` file object.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_not_implemented()\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/core/__init__.py:122\u001b[0m, in \u001b[0;36mBase._not_implemented\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mpath\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m    121\u001b[0m     extra \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m on \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpath\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 122\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mmodule\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m}\u001b[39;00m\u001b[39m()\u001b[39m\u001b[39m{\u001b[39;00mextra\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: earthkit.data.readers.netcdf.NetCDFField.write()"
+     ]
+    }
+   ],
    "source": [
     "cds_dataset_name = 'reanalysis-era5-single-levels'\n",
     "\n",
@@ -85,7 +115,7 @@
     "}\n",
     "\n",
     "if DOWNLOAD_FROM_CDS:\n",
-    "    era5_T2M_data = ek.data.from_source(\"cds\", cds_dataset_name, cds_request)\n",
+    "    #era5_T2M_data = ek.data.from_source(\"cds\", cds_dataset_name, cds_request)\n",
     "\n",
     "    cds_request.update({\n",
     "        \"variable\": \"total_precipitation\",\n",
@@ -95,10 +125,10 @@
     "\n",
     "    # # Save for next time\n",
     "    # era5_T2M_data.save(f\"{LOCAL_DATA_DIR}/era5_t2m_Europe_2015_JanFebMarch.grib\")\n",
-    "    # era5_TP_data.save(f\"{LOCAL_DATA_DIR}/era5_tp_Europe_2015_JanFebMarch.grib\")\n",
+    "    # era5_TP_data.save(f\"{LOCAL_DATA_DIR}/era5_tp_Europe_2015_JanFebMarch.nc\")\n",
     "else:\n",
     "    era5_T2M_data = ek.data.from_source(\"file\", f\"{LOCAL_DATA_DIR}/era5_t2m_Europe_2015_JanFebMarch.grib\")\n",
-    "    era5_TP_data = ek.data.from_source(\"file\", f\"{LOCAL_DATA_DIR}/era5_tp_Europe_2015_JanFebMarch.grib\")\n"
+    "    era5_TP_data = ek.data.from_source(\"file\", f\"{LOCAL_DATA_DIR}/era5_tp_Europe_2015_JanFebMarch.nc\")\n"
    ]
   },
   {
@@ -3449,7 +3479,7 @@
     "as we are returning xarray(-like) object, we can use off the shelf packages to handle this situation.\n",
     "\n",
     "Here we use cf_units, this package is already used behind the scenes by earthkit-maps, hence is available in\n",
-    "out environment"
+    "our environment"
    ]
   },
   {
