--- a/notebooks/13_aggregate_over_geometries.ipynb
+++ b/notebooks/13_aggregate_over_geometries.ipynb
@@ -15,20 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np # Everyone loves a numpy!\n",
     "\n",
-    "from earthkit import data as ek_data\n",
+    "import earthkit as ek\n",
     "from earthkit.climate import aggregate as ek_aggregate\n",
-    "from earthkit import maps as ek_maps\n",
     "\n",
-    "# For this example we are going to use some geometry files we have stored for testing,\n",
-    "# but any geojson files or geopandas dataframes would work.\n",
-    "from earthkit.data.testing import earthkit_remote_test_data_file\n",
-    "\n",
+    "DOWNLOAD_FROM_CDS = True\n",
+    "# If using the pre-downloaded data, please provide the directory where the data is stored\n",
+    "LOCAL_DATA_DIR = \"../test_data/\"\n",
     "\n",
     "# An extra to suppress some of the warnings we have in place whilst the code is in development\n",
     "import warnings\n",
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +75,12 @@
     "    ],\n",
     "    'area': area\n",
     "}\n",
-    "era5_data = ek_data.from_source(\"cds\", cds_dataset_name, cds_request)\n"
+    "if DOWNLOAD_FROM_CDS:\n",
+    "    era5_data = ek.data.from_source(\"cds\", cds_dataset_name, cds_request)\n",
+    "    #  This is how the test data was saved:\n",
+    "    # era5_data.save(f\"{LOCAL_DATA_DIR}/era5-t2m-Europe-2015.grib\")\n",
+    "else:\n",
+    "    era5_data = ek.data.from_source(\"file\", f\"{LOCAL_DATA_DIR}/era5-t2m-Europe-2015.grib\")\n"
    ]
   },
   {
@@ -232,6 +235,10 @@
     }
    ],
    "source": [
+    "# For this example we are going to use some geometry files we have stored for testing,\n",
+    "# but any geojson files or geopandas dataframes would work.\n",
+    "from earthkit.data.testing import earthkit_remote_test_data_file\n",
+    "\n",
     "# Use some demonstration polygons stored, this could be any url or path to geojson file\n",
     "remote_nuts_url = earthkit_remote_test_data_file(\"test-data\", \"NUTS_RG_60M_2021_4326_LEVL_0.geojson\")\n",
     "nuts_data = ek_data.from_source(\"url\", remote_nuts_url)\n",
