data dir update from notebooks

--- a/notebooks/01_introducing_earthkit.ipynb
+++ b/notebooks/01_introducing_earthkit.ipynb
@@ -56,22 +56,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c70bf3c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../test_data//era5-temperature-sep-2022.grib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/01_introducing_earthkit.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/01_introducing_earthkit.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     data\u001b[39m.\u001b[39msave(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;00m\u001b[39m/era5-temperature-sep-2022.grib\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/01_introducing_earthkit.ipynb#W5sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/01_introducing_earthkit.ipynb#W5sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     data \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mfrom_source(\u001b[39m\"\u001b[39;49m\u001b[39mfile\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m{\u001b[39;49;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;49;00m\u001b[39m/era5-temperature-sep-2022.grib\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/__init__.py:146\u001b[0m, in \u001b[0;36mfrom_source\u001b[0;34m(name, lazily, *args, **kwargs)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[39mwhile\u001b[39;00m src \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m prev:\n\u001b[1;32m    145\u001b[0m     prev \u001b[39m=\u001b[39m src\n\u001b[0;32m--> 146\u001b[0m     src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39;49mmutate()\n\u001b[1;32m    147\u001b[0m \u001b[39mreturn\u001b[39;00m src\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/file.py:62\u001b[0m, in \u001b[0;36mFileSource.mutate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[39mreturn\u001b[39;00m FileIndexedSource(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpath, \u001b[39mfilter\u001b[39m\u001b[39m=\u001b[39m\u001b[39mfilter\u001b[39m, merger\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmerger, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkw)\n\u001b[1;32m     60\u001b[0m \u001b[39m# Give a chance to directories and zip files\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39m# to return a multi-source\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m source \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_reader\u001b[39m.\u001b[39mmutate_source()\n\u001b[1;32m     63\u001b[0m \u001b[39mif\u001b[39;00m source \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (\u001b[39mNone\u001b[39;00m, \u001b[39mself\u001b[39m):\n\u001b[1;32m     64\u001b[0m     source\u001b[39m.\u001b[39m_parent \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/file.py:81\u001b[0m, in \u001b[0;36mFileSource._reader\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m     79\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_reader\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     80\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_ \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_ \u001b[39m=\u001b[39m reader(\u001b[39mself\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpath)\n\u001b[1;32m     82\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/readers/__init__.py:159\u001b[0m, in \u001b[0;36mreader\u001b[0;34m(source, path)\u001b[0m\n\u001b[1;32m    156\u001b[0m LOG\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mReader for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m, path)\n\u001b[1;32m    158\u001b[0m n_bytes \u001b[39m=\u001b[39m SETTINGS\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mreader-type-check-bytes\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 159\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(path, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    160\u001b[0m     magic \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread(n_bytes)\n\u001b[1;32m    162\u001b[0m LOG\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mLooking for a reader for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m, path, magic)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../test_data//era5-temperature-sep-2022.grib'"
+     ]
+    }
+   ],
    "source": [
-    "data = ek.data.from_source(\n",
-    "    \"cds\",\n",
-    "    \"reanalysis-era5-single-levels-monthly-means\",\n",
-    "    {\n",
-    "        \"product_type\": \"monthly_averaged_reanalysis\",\n",
-    "        \"variable\": \"2m_temperature\",\n",
-    "        \"year\": \"2022\",\n",
-    "        \"month\": \"09\",\n",
-    "        \"time\": \"00:00\",\n",
-    "    },\n",
-    ")"
+    "DOWNLOAD_FROM_CDS = False\n",
+    "# Directory where any local data is stored\n",
+    "LOCAL_DATA_DIR = \"../test_data/\"\n",
+    "\n",
+    "if DOWNLOAD_FROM_CDS:\n",
+    "    data = ek.data.from_source(\n",
+    "        \"cds\",\n",
+    "        \"reanalysis-era5-single-levels-monthly-means\",\n",
+    "        {\n",
+    "            \"product_type\": \"monthly_averaged_reanalysis\",\n",
+    "            \"variable\": \"2m_temperature\",\n",
+    "            \"year\": \"2022\",\n",
+    "            \"month\": \"09\",\n",
+    "            \"time\": \"00:00\",\n",
+    "        },\n",
+    "    )\n",
+    "    # Save to a file\n",
+    "    data.save(f\"{LOCAL_DATA_DIR}/era5-temperature-sep-2022.grib\")\n",
+    "else:\n",
+    "    data = ek.data.from_source(\"file\", f\"{LOCAL_DATA_DIR}/era5-temperature-sep-2022.grib\")"
    ]
   },
   {
@@ -88,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "16409a5f",
    "metadata": {},
    "outputs": [
@@ -527,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b62fbf73",
    "metadata": {},
    "outputs": [
@@ -780,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9d85be5a",
    "metadata": {},
    "outputs": [
@@ -813,17 +838,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "69427fc8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save to a file\n",
-    "data.save(\"era5-temperature-sep-2022.grib\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "551f2f6b",
    "metadata": {},
@@ -845,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "be0a318c",
    "metadata": {},
    "outputs": [
@@ -881,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b0adf80b",
    "metadata": {},
    "outputs": [
