--- a/notebooks/02_visualisation_basics.ipynb
+++ b/notebooks/02_visualisation_basics.ipynb
@@ -111,34 +111,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "bf31cf47",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-08 15:31:09,539 INFO Welcome to the CDS\n",
-      "2023-09-08 15:31:09,540 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels-monthly-means\n",
-      "2023-09-08 15:31:10,047 INFO Request is completed\n",
-      "2023-09-08 15:31:10,048 INFO Downloading https://download-0020.copernicus-climate.eu/cache-compute-0020/cache/data1/adaptor.mars.internal-1694093023.1850748-10019-6-5ff4e21c-8e3d-4d7e-92e3-9dd1ac4d7fe2.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-d6ed2bd74f40fdd8bd3ba07b767207d91b72277eb1b5e2e1e19a74220eef640d.cache.tmp (702.1K)\n",
-      "2023-09-08 15:31:10,830 INFO Download rate 898.1K/s\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../test_data//era5-sst-el-nino-1993-1997-1998.grib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     data\u001b[39m.\u001b[39msave(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m../\u001b[39m\u001b[39m{\u001b[39;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;00m\u001b[39m/era5-sst-el-nino-1993-1997-1998.grib\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     data \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mfrom_source(\u001b[39m\"\u001b[39;49m\u001b[39mfile\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m../\u001b[39;49m\u001b[39m{\u001b[39;49;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;49;00m\u001b[39m/era5-sst-el-nino-1993-1997-1998.grib\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/__init__.py:146\u001b[0m, in \u001b[0;36mfrom_source\u001b[0;34m(name, lazily, *args, **kwargs)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[39mwhile\u001b[39;00m src \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m prev:\n\u001b[1;32m    145\u001b[0m     prev \u001b[39m=\u001b[39m src\n\u001b[0;32m--> 146\u001b[0m     src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39;49mmutate()\n\u001b[1;32m    147\u001b[0m \u001b[39mreturn\u001b[39;00m src\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/file.py:62\u001b[0m, in \u001b[0;36mFileSource.mutate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[39mreturn\u001b[39;00m FileIndexedSource(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpath, \u001b[39mfilter\u001b[39m\u001b[39m=\u001b[39m\u001b[39mfilter\u001b[39m, merger\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmerger, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkw)\n\u001b[1;32m     60\u001b[0m \u001b[39m# Give a chance to directories and zip files\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39m# to return a multi-source\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m source \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_reader\u001b[39m.\u001b[39mmutate_source()\n\u001b[1;32m     63\u001b[0m \u001b[39mif\u001b[39;00m source \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (\u001b[39mNone\u001b[39;00m, \u001b[39mself\u001b[39m):\n\u001b[1;32m     64\u001b[0m     source\u001b[39m.\u001b[39m_parent \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/file.py:81\u001b[0m, in \u001b[0;36mFileSource._reader\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m     79\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_reader\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     80\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_ \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_ \u001b[39m=\u001b[39m reader(\u001b[39mself\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpath)\n\u001b[1;32m     82\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_\n",
+      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/readers/__init__.py:159\u001b[0m, in \u001b[0;36mreader\u001b[0;34m(source, path)\u001b[0m\n\u001b[1;32m    156\u001b[0m LOG\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mReader for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m, path)\n\u001b[1;32m    158\u001b[0m n_bytes \u001b[39m=\u001b[39m SETTINGS\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mreader-type-check-bytes\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 159\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(path, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    160\u001b[0m     magic \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread(n_bytes)\n\u001b[1;32m    162\u001b[0m LOG\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mLooking for a reader for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m, path, magic)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../test_data//era5-sst-el-nino-1993-1997-1998.grib'"
      ]
     }
    ],
    "source": [
-    "data = ek.data.from_source(\n",
-    "    \"cds\", \"reanalysis-era5-single-levels-monthly-means\",\n",
-    "    {\n",
-    "        \"product_type\": \"monthly_averaged_reanalysis\",\n",
-    "        \"variable\": \"sea_surface_temperature\",\n",
-    "        \"year\": list(YEARS),\n",
-    "        \"month\": \"12\",\n",
-    "        \"time\": \"00:00\",\n",
-    "        \"area\": bbox,\n",
-    "    },\n",
-    ")"
+    "\n",
+    "DOWNLOAD_FROM_CDS = False\n",
+    "LOCAL_DATA_DIR = \"../test_data/\"\n",
+    "\n",
+    "if DOWNLOAD_FROM_CDS:\n",
+    "    data = ek.data.from_source(\n",
+    "        \"cds\", \"reanalysis-era5-single-levels-monthly-means\",\n",
+    "        {\n",
+    "            \"product_type\": \"monthly_averaged_reanalysis\",\n",
+    "            \"variable\": \"sea_surface_temperature\",\n",
+    "            \"year\": list(YEARS),\n",
+    "            \"month\": \"12\",\n",
+    "            \"time\": \"00:00\",\n",
+    "            \"area\": bbox,\n",
+    "        },\n",
+    "    )\n",
+    "    data.save(f'{LOCAL_DATA_DIR}/era5-sst-el-nino-1993-1997-1998.grib')\n",
+    "else:\n",
+    "    data = ek.data.from_source(\"file\", f'{LOCAL_DATA_DIR}/era5-sst-el-nino-1993-1997-1998.grib')"
    ]
   },
   {
@@ -151,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a9355300",
    "metadata": {},
    "outputs": [
@@ -279,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "00f4754f",
    "metadata": {},
    "outputs": [],
@@ -301,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "db6a7dfc",
    "metadata": {},
    "outputs": [
@@ -359,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e3317cf9-f499-405a-93f7-91bf32107b4b",
    "metadata": {},
    "outputs": [
@@ -416,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d258e729-fbbc-4610-bfe5-3624c236813d",
    "metadata": {},
    "outputs": [
@@ -499,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9a261535-48af-4acc-ba3d-7a41cb77a5f1",
    "metadata": {},
    "outputs": [],
@@ -517,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "18d3ac22-19b1-4283-b1ea-83a3c4da4fbb",
    "metadata": {},
    "outputs": [
@@ -548,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f9636324-fbc7-4fa6-b186-7e005cf55458",
    "metadata": {},
    "outputs": [
@@ -591,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "703a89dc-d749-4882-abbe-0bdfe3bd8045",
    "metadata": {},
    "outputs": [
@@ -625,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a4781107-465c-4681-8a3b-08299bedcfb2",
    "metadata": {},
    "outputs": [
@@ -775,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "bdbeb630-294e-4a56-b0be-829586bbbfb6",
    "metadata": {},
    "outputs": [],
@@ -794,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5e49b621-93a9-4476-ada0-acde535b7a4b",
    "metadata": {},
    "outputs": [
@@ -849,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b7503a65-f8bb-4501-9b60-6b15ef7b3a92",
    "metadata": {},
    "outputs": [
