--- a/notebooks/13_aggregate_over_geometries.ipynb
+++ b/notebooks/13_aggregate_over_geometries.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import earthkit as ek\n",
     "from earthkit.climate import aggregate as ek_aggregate\n",
     "\n",
-    "DOWNLOAD_FROM_CDS = True\n",
+    "DOWNLOAD_FROM_CDS = False\n",
     "# If using the pre-downloaded data, please provide the directory where the data is stored\n",
     "LOCAL_DATA_DIR = \"../test_data/\"\n",
     "\n",
@@ -35,9 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ek_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb Cell 3\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cds_dataset_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mreanalysis-era5-single-levels\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# We use an Earthkit bounding box object to describe our area, this clears up any lack of clarity of the order of\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#  North, South, East, West.\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m area \u001b[39m=\u001b[39m ek_data\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mbbox\u001b[39m.\u001b[39mBoundingBox(north\u001b[39m=\u001b[39m\u001b[39m80\u001b[39m, south\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m, west\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m30\u001b[39m, east\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m cds_request \u001b[39m=\u001b[39m {\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mproduct_type\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mreanalysis\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mvariable\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39m2m_temperature\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     \u001b[39m'\u001b[39m\u001b[39marea\u001b[39m\u001b[39m'\u001b[39m: area\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m }\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/13_aggregate_over_geometries.ipynb#W2sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39mif\u001b[39;00m DOWNLOAD_FROM_CDS:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ek_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cds_dataset_name = 'reanalysis-era5-single-levels'\n",
     "\n",
@@ -94,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2285,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2795,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3278,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3772,7 +3784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4694,7 +4706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
