--- a/notebooks/02_visualisation_basics.ipynb
+++ b/notebooks/02_visualisation_basics.ipynb
@@ -111,26 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bf31cf47",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../test_data//era5-sst-el-nino-1993-1997-1998.grib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     data\u001b[39m.\u001b[39msave(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m../\u001b[39m\u001b[39m{\u001b[39;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;00m\u001b[39m/era5-sst-el-nino-1993-1997-1998.grib\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     data \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mfrom_source(\u001b[39m\"\u001b[39;49m\u001b[39mfile\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m../\u001b[39;49m\u001b[39m{\u001b[39;49;00mLOCAL_DATA_DIR\u001b[39m}\u001b[39;49;00m\u001b[39m/era5-sst-el-nino-1993-1997-1998.grib\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/__init__.py:146\u001b[0m, in \u001b[0;36mfrom_source\u001b[0;34m(name, lazily, *args, **kwargs)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[39mwhile\u001b[39;00m src \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m prev:\n\u001b[1;32m    145\u001b[0m     prev \u001b[39m=\u001b[39m src\n\u001b[0;32m--> 146\u001b[0m     src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39;49mmutate()\n\u001b[1;32m    147\u001b[0m \u001b[39mreturn\u001b[39;00m src\n",
-      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/file.py:62\u001b[0m, in \u001b[0;36mFileSource.mutate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[39mreturn\u001b[39;00m FileIndexedSource(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpath, \u001b[39mfilter\u001b[39m\u001b[39m=\u001b[39m\u001b[39mfilter\u001b[39m, merger\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmerger, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkw)\n\u001b[1;32m     60\u001b[0m \u001b[39m# Give a chance to directories and zip files\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[39m# to return a multi-source\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m source \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_reader\u001b[39m.\u001b[39mmutate_source()\n\u001b[1;32m     63\u001b[0m \u001b[39mif\u001b[39;00m source \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (\u001b[39mNone\u001b[39;00m, \u001b[39mself\u001b[39m):\n\u001b[1;32m     64\u001b[0m     source\u001b[39m.\u001b[39m_parent \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\n",
-      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/sources/file.py:81\u001b[0m, in \u001b[0;36mFileSource._reader\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m     79\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_reader\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     80\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_ \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 81\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_ \u001b[39m=\u001b[39m reader(\u001b[39mself\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpath)\n\u001b[1;32m     82\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader_\n",
-      "File \u001b[0;32m~/miniconda3/envs/earthkit/lib/python3.10/site-packages/earthkit/data/readers/__init__.py:159\u001b[0m, in \u001b[0;36mreader\u001b[0;34m(source, path)\u001b[0m\n\u001b[1;32m    156\u001b[0m LOG\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mReader for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m, path)\n\u001b[1;32m    158\u001b[0m n_bytes \u001b[39m=\u001b[39m SETTINGS\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mreader-type-check-bytes\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 159\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(path, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    160\u001b[0m     magic \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread(n_bytes)\n\u001b[1;32m    162\u001b[0m LOG\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mLooking for a reader for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m, path, magic)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../test_data//era5-sst-el-nino-1993-1997-1998.grib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "DOWNLOAD_FROM_CDS = False\n",
@@ -163,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a9355300",
    "metadata": {},
    "outputs": [
@@ -291,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00f4754f",
    "metadata": {},
    "outputs": [],
@@ -313,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db6a7dfc",
    "metadata": {},
    "outputs": [
@@ -371,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e3317cf9-f499-405a-93f7-91bf32107b4b",
    "metadata": {},
    "outputs": [
@@ -379,17 +363,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-08 15:31:12,359 INFO Welcome to the CDS\n",
-      "2023-09-08 15:31:12,359 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/efas-historical\n",
-      "2023-09-08 15:31:12,549 INFO Request is completed\n",
-      "2023-09-08 15:31:12,552 INFO Downloading https://download-0008-clone.copernicus-climate.eu/cache-compute-0008/cache/data2/adaptor.mars_and_url.retrieve-1694069303.811108-8764-18-1aec12ce-852c-4221-977d-dac3f039ed29.zip to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-99655b0cc08285a94a9071606fae7ddc6b94d88f8779228087061eb1932b7120.cache.tmp (22.7M)\n",
-      "2023-09-08 15:31:20,138 INFO Download rate 3M/s     \n"
+      "2023-09-12 11:26:57,097 INFO Welcome to the CDS\n",
+      "2023-09-12 11:26:57,098 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/efas-historical\n",
+      "2023-09-12 11:26:57,295 INFO Request is completed\n",
+      "2023-09-12 11:26:57,296 INFO Downloading https://download-0017.copernicus-climate.eu/cache-compute-0017/cache/data1/adaptor.mars_and_url.retrieve-1694507373.6722708-17486-18-f696cc13-dbf2-4e9c-9ea3-9af106ae4393.zip to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-99655b0cc08285a94a9071606fae7ddc6b94d88f8779228087061eb1932b7120.cache.tmp (22.7M)\n",
+      "2023-09-12 11:27:10,749 INFO Download rate 1.7M/s   \n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deb61cc081c24234be09ad72db200694",
+       "model_id": "1eeeb44d15c14a47a2b63b071e505660",
        "version_major": 2,
        "version_minor": 0
       },
@@ -428,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d258e729-fbbc-4610-bfe5-3624c236813d",
    "metadata": {},
    "outputs": [
@@ -511,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9a261535-48af-4acc-ba3d-7a41cb77a5f1",
    "metadata": {},
    "outputs": [],
@@ -529,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "18d3ac22-19b1-4283-b1ea-83a3c4da4fbb",
    "metadata": {},
    "outputs": [
@@ -560,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f9636324-fbc7-4fa6-b186-7e005cf55458",
    "metadata": {},
    "outputs": [
@@ -603,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "703a89dc-d749-4882-abbe-0bdfe3bd8045",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c06e47ad146c48a18141101ad9750a29",
+       "model_id": "e4ecfcc25da4402ebbcb6707d16e8c08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -637,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a4781107-465c-4681-8a3b-08299bedcfb2",
    "metadata": {},
    "outputs": [
@@ -787,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "bdbeb630-294e-4a56-b0be-829586bbbfb6",
    "metadata": {},
    "outputs": [],
@@ -806,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5e49b621-93a9-4476-ada0-acde535b7a4b",
    "metadata": {},
    "outputs": [
@@ -814,16 +798,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-08 15:31:29,126 INFO Welcome to the CDS\n",
-      "2023-09-08 15:31:29,127 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels-monthly-means\n",
-      "2023-09-08 15:31:29,325 INFO Request is completed\n",
-      "2023-09-08 15:31:29,327 INFO Downloading https://download-0017.copernicus-climate.eu/cache-compute-0017/cache/data1/adaptor.mars.internal-1694073876.066612-5664-2-d52b5821-ab22-49bc-8a6d-7d55b2b4a129.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-179831aa5f9b50f9987efffebdbddd1ab44e1ee9ad3b991f7dc97d1bee40d9c0.cache.tmp (59.4M)\n",
-      "2023-09-08 15:31:42,892 INFO Download rate 4.4M/s   \n",
-      "2023-09-08 15:31:42,979 INFO Welcome to the CDS\n",
-      "2023-09-08 15:31:42,980 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels-monthly-means\n",
-      "2023-09-08 15:31:43,147 INFO Request is completed\n",
-      "2023-09-08 15:31:43,149 INFO Downloading https://download-0018.copernicus-climate.eu/cache-compute-0018/cache/data3/adaptor.mars.internal-1694073898.3543665-1676-5-0fdc13b9-068a-4671-86eb-2afda2216f2a.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-79d2df20093cc7ae52401c9c53995fc1f2469095f889d3f9ac6cf78683321a3f.cache.tmp (2M)\n",
-      "2023-09-08 15:31:44,510 INFO Download rate 1.5M/s   \n"
+      "2023-09-12 11:27:25,973 INFO Welcome to the CDS\n",
+      "2023-09-12 11:27:25,974 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels-monthly-means\n",
+      "2023-09-12 11:27:26,113 INFO Request is completed\n",
+      "2023-09-12 11:27:26,113 INFO Downloading https://download-0017.copernicus-climate.eu/cache-compute-0017/cache/data7/adaptor.mars.internal-1694507680.2921793-10926-1-45facc6f-af39-4fe5-bbbc-2eac03a4a4a4.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-179831aa5f9b50f9987efffebdbddd1ab44e1ee9ad3b991f7dc97d1bee40d9c0.cache.tmp (59.4M)\n",
+      "2023-09-12 11:27:47,202 INFO Download rate 2.8M/s   \n",
+      "2023-09-12 11:27:47,412 INFO Welcome to the CDS\n",
+      "2023-09-12 11:27:47,413 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels-monthly-means\n",
+      "2023-09-12 11:27:47,699 INFO Request is completed\n",
+      "2023-09-12 11:27:47,701 INFO Downloading https://download-0018.copernicus-climate.eu/cache-compute-0018/cache/data8/adaptor.mars.internal-1694507694.7158546-1191-11-89d9e24c-ad57-40bf-af47-2a3ba7b84480.grib to /var/folders/l2/529q7bzs665bnrn7_wjx1nsr0000gn/T/earthkit-data-edwardcomyn-platt/cds-retriever-79d2df20093cc7ae52401c9c53995fc1f2469095f889d3f9ac6cf78683321a3f.cache.tmp (2M)\n",
+      "2023-09-12 11:27:49,330 INFO Download rate 1.2M/s   \n"
      ]
     }
    ],
@@ -861,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b7503a65-f8bb-4501-9b60-6b15ef7b3a92",
    "metadata": {},
    "outputs": [
@@ -872,7 +856,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m era5_climatology \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39;49mclimate\u001b[39m.\u001b[39maggregate\u001b[39m.\u001b[39mclimatology\u001b[39m.\u001b[39mmean(era5_reference, frequency\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmonth\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m era5_anomaly \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39mclimate\u001b[39m.\u001b[39maggregate\u001b[39m.\u001b[39mclimatology\u001b[39m.\u001b[39manomaly(era5_2023, era5_climatology, label\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, frequency\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmonth\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32m/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb Cell 42\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X56sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m era5_climatology \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39;49mclimate\u001b[39m.\u001b[39maggregate\u001b[39m.\u001b[39mclimatology\u001b[39m.\u001b[39mmean(era5_reference, frequency\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmonth\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/edwardcomyn-platt/Work/Git_Repositories/EARTHKIT/c3s-ga-training/notebooks/02_visualisation_basics.ipynb#X56sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m era5_anomaly \u001b[39m=\u001b[39m ek\u001b[39m.\u001b[39mclimate\u001b[39m.\u001b[39maggregate\u001b[39m.\u001b[39mclimatology\u001b[39m.\u001b[39manomaly(era5_2023, era5_climatology, label\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, frequency\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmonth\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'earthkit' has no attribute 'climate'"
      ]
     }
