additional comments and clarity about pre-downloaded data option

--- a/notebooks/11_daily_monthly_stats.ipynb
+++ b/notebooks/11_daily_monthly_stats.ipynb
@@ -25,7 +25,9 @@
     "# To make our life easier, we import the aggregate subpackage directly\n",
     "from earthkit.climate import aggregate as ek_aggregate\n",
     "\n",
-    "DOWNLOAD_FROM_CDS = False\n",
+    "# If you are using the pre-downloaded data then please set DOWNLOAD_FROM_CDS to False\n",
+    "#  and set the LOCAL_DATA_DIR to where you stored the data.\n",
+    "DOWNLOAD_FROM_CDS = True\n",
     "LOCAL_DATA_DIR = \"../test_data/\""
    ]
   },
@@ -90,11 +92,15 @@
     "\n",
     "    cds_request.update({\n",
     "        \"variable\": \"total_precipitation\",\n",
-    "        \"format\": \"netcdf\"\n",
+    "        # We use the netCDF file here as earthkit does not yet have the functionality to\n",
+    "        # handle accumulated variable time dimensions which has been implemented behind the scenes on the CDS\n",
+    "        \"format\": \"netcdf\"  \n",
     "    })\n",
     "    era5_TP_data = ek.data.from_source(\"cds\", cds_dataset_name, cds_request)\n",
     "\n",
-    "    # # Save for next time\n",
+    "    # # These commands were used to save the data files in our managed storage,\n",
+    "    # #  they are not required for the notebook to run, and your computer will cache the \n",
+    "    # #  results so you don't have to download again\n",
     "    # era5_T2M_data.save(f\"{LOCAL_DATA_DIR}/era5_t2m_Europe_2015_JanFebMarch.grib\")\n",
     "    # era5_TP_data.save(f\"{LOCAL_DATA_DIR}/era5_tp_Europe_2015_JanFebMarch.nc\")\n",
     "else:\n",
