--- a/notebooks/12_climatologies_anomalies.ipynb
+++ b/notebooks/12_climatologies_anomalies.ipynb
@@ -23,6 +23,8 @@
     "import earthkit as ek\n",
     "from earthkit.climate import aggregate as ek_aggregate\n",
     "\n",
+    "# If you are using the pre-downloaded data then please set DOWNLOAD_FROM_CDS to False\n",
+    "#  and set the LOCAL_DATA_DIR to where you stored the data.\n",
     "DOWNLOAD_FROM_CDS = True\n",
     "LOCAL_DATA_DIR = \"../test_data/\"\n",
     "\n",
@@ -82,7 +84,9 @@
     "\n",
     "if DOWNLOAD_FROM_CDS:\n",
     "    era5_data = ek.data.from_source(\"cds\", cds_dataset_name, cds_request)\n",
-    "    #  This is how the test data was saved:\n",
+    "    # # These commands were used to save the data files in our managed storage,\n",
+    "    # #  they are not required for the notebook to run, and your computer will cache the \n",
+    "    # #  results so you don't have to download again\n",
     "    # era5_data.save(f\"{LOCAL_DATA_DIR}/era5-t2m-Europe-2015-2017.grib\")\n",
     "else:\n",
     "    era5_data = ek.data.from_source(\"file\", f\"{LOCAL_DATA_DIR}/era5-t2m-Europe-2015-2017.grib\")\n",
